<resources>
    <string name="app_name">TimeCapsule</string>
    <string name="homeFragment">홈</string>
    <string name="writeFragment">글쓰기</string>
    <string name="readFragment">열람하기</string>
    <string name="homePlace">서울여대</string>
    <string name="homePlaceText">에서의 타임캡슐</string>
    <string name="homeTitle">잊을 수 없는 하루</string>
    <string name="homeDate">2024.06.21</string>
    <string name="homeDateText">에 작성된 글입니다.</string>
    <string name="homeOpenBtn">캡슐 열어보기</string>
    <string name="homeOpenDay">캡슐 오픈까지 D-7</string>
    <string name="cancelBtn">취소 버튼</string>
    <string name="postBtn">등록</string>
    <string name="writeTitle">제목을 입력하세요.</string>
    <string name="writeContent">내용을 입력하세요.</string>
    <string name="writeUpload">이미지 업로드</string>
    <string name="writeUploadBtn">이미지 업로드 버튼</string>
    <string name="writeCategory">카테고리</string>
    <string name="writeNoSetting">설정 안 함</string>
    <string name="writeSetting">설정</string>
    <string name="writeOpenDay">열람 가능일</string>
    <string name="writeDate">2024.07.27</string>
    <string name="writeNoDate">즉시 열람 가능</string>
    <string name="categorySchool">학교</string>
    <string name="categoryFamily">가족</string>
    <string name="categoryTravel">여행</string>
    <string name="categoryFriend">친구</string>
    <string name="categoryFood">음식</string>
    <string name="importImage">이미지 삽입</string>
    <string name="signUp">회원가입</string>
    <string name="signIdEmail">아이디 또는 이메일 주소</string>
    <string name="signPassword">비밀번호</string>
    <string name="signPasswordCheck">비밀번호 확인</string>
    <string name="signComplete">완료</string>
    <string name="login">로그인</string>
    <string name="readTitle">잊을 수 없는 하루</string>
    <string name="readTimeCapsuleImage">타임캡슐 랜덤 이미지</string>
    <string name="readViewable">열람 가능</string>
    <string name="readUnViewable">열람 불가능</string>
    <string name="readAllCategory">전체</string>
    <string name="readTimeCapsuleDefaultImage">열람 불가능 타임캡슐 이미지</string>
    <string name="readUnViewableD">D-7</string>
    <string name="readDetailBackBtn">돌아가기 버튼</string>
    <string name="readDetailTitle">잊을 수 없는 하루</string>
    <string name="readDetailPost">작성됨</string>
    <string name="readDetailPutBtn">수정</string>
    <string name="readDetailDeleteBtn">삭제</string>
    <string name="readDetailImage">디테일 이미지</string>
    <string name="readDetailCompletePut">수정을 완료하시겠습니까?</string>
    <string name="readDetailCompleteDelete">삭제를 완료하시겠습니까?</string>
    <string name="readDetailCancelBtn">취소</string>
    <string name="readDetailCompleteBtn">완료</string>
    <string name="splash1">splash 이미지 1</string>
    <string name="splash2">splash 이미지 2</string>
</resources>