<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/read_fragment_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readFragment"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/read_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabBackground="@drawable/read_tab_template"
        app:tabIndicator="@null"
        app:tabTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/read_fragment_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/read_tl"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/read_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/read_tl"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/read_category_all_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readAllCategory"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/read_category_school_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categorySchool"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/read_category_family_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoryFamily"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/read_category_travel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoryTravel"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/read_category_friend_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoryFriend"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/read_category_food_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoryFood"
            android:layout_marginStart="30dp"/>
    </LinearLayout>

    <View
        android:id="@+id/read_line_v"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/read_ll"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/read_vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/read_line_v"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>