<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_yellow">

    <LinearLayout
        android:id="@+id/read_detail_fragment_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp">

    <ImageButton
        android:id="@+id/read_detail_left_arrow_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/icon_arrow_left"
        android:background="@null"
        android:contentDescription="@string/readDetailBackBtn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readFragment"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/read_detail_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readDetailTitle"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/read_detail_fragment_ll"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:id="@+id/read_detail_date_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/read_detail_title_tv"
        app:layout_constraintStart_toStartOf="@id/read_detail_title_tv"
        android:layout_marginTop="5dp">

    <TextView
        android:id="@+id/read_detail_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/writeDate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readDetailPost"
            android:paddingHorizontal="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/read_detail_date_ll"
        app:layout_constraintBottom_toBottomOf="@id/read_detail_date_ll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readDetailPutBtn"
            android:textSize="16sp"
            android:paddingHorizontal="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readDetailDeleteBtn"
            android:paddingHorizontal="15dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:id="@+id/read_detail_v"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/read_detail_date_ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <ScrollView
        android:id="@+id/write_content_sv"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        app:layout_constraintTop_toBottomOf="@id/read_detail_v"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/write_edit_background"
            android:paddingBottom="30dp">

            <ImageView
                android:id="@+id/write_image_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/importImage" />

            <TextView
                android:id="@+id/write_content_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="top"
                android:background="@color/transparent"
                app:layout_constraintTop_toBottomOf="@id/write_image_iv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingHorizontal="10dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>