<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:background="@drawable/round_ver_2">

    <LinearLayout
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/dialog_home_cancel_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/cancelBtn"
            android:src="@drawable/cancel_btn" />

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_category_tv"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:text="@string/writeCategory"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/orange"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <RadioGroup
        android:id="@+id/write_category_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/dialog_category_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:id="@+id/write_category_school_rb"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00ffffff"
            android:gravity="center_vertical"
            android:paddingHorizontal="5dp"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/categorySchool"
            android:textSize="20sp"
            app:buttonTint="@color/orange"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/write_category_family_rb"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00ffffff"
            android:paddingHorizontal="5dp"
            android:gravity="center_vertical"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/categoryFamily"
            android:textSize="20sp"
            app:buttonTint="@color/orange"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/write_category_travel_rb"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00ffffff"
            android:paddingHorizontal="5dp"
            android:gravity="center_vertical"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/categoryTravel"
            android:textSize="20sp"
            app:buttonTint="@color/orange"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/write_category_friend_rb"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00ffffff"
            android:paddingHorizontal="5dp"
            android:gravity="center_vertical"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/categoryFriend"
            android:textSize="20sp"
            app:buttonTint="@color/orange"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/write_category_food_rb"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00ffffff"
            android:paddingHorizontal="5dp"
            android:gravity="center_vertical"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/categoryFood"
            android:textSize="20sp"
            app:buttonTint="@color/orange"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
