<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow">

    <TextView
        android:id="@+id/signUp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="150dp"
        android:layout_marginStart="35dp"/>

    <EditText
        android:id="@+id/signUp_idEmail_et"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:background="@drawable/signup_edittext_background"
        app:layout_constraintTop_toBottomOf="@id/signUp_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="15dp"
        android:inputType="text|textEmailAddress"
        android:hint="@string/signIdEmail"
        android:autofillHints="no"/>

    <EditText
        android:id="@+id/signUp_password_et"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:background="@drawable/signup_edittext_background"
        app:layout_constraintTop_toBottomOf="@id/signUp_idEmail_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="15dp"
        android:hint="@string/signPassword"
        android:inputType="text|textPassword"
        android:autofillHints="no"/>

    <EditText
        android:id="@+id/signUp_password_check_et"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:background="@drawable/signup_edittext_background"
        app:layout_constraintTop_toBottomOf="@id/signUp_password_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="15dp"
        android:hint="@string/signPasswordCheck"
        android:inputType="text|textPassword"
        android:autofillHints="no"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUp_btn"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:text="@string/signComplete"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/signup_login_btn_background_1"
        app:layout_constraintTop_toBottomOf="@id/signUp_password_check_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>