<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:background="@drawable/round_ver_3">

    <TextView
        android:id="@+id/dialog_delete_notice_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readDetailCompleteDelete"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:id="@+id/dialog_delete_ll"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_delete_notice_tv"
        android:layout_marginTop="50dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_delete_no_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_no_button_round"
            android:text="@string/readDetailCancelBtn"
            android:textColor="@color/dark_gray"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_delete_yes_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/dialog_yes_button_round"
            android:text="@string/readDetailCompleteBtn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>